# CAMFC-client

./: .gitignore  PRODUCT_MANUAL.md  README.md  ble_service.py  example.py  index.html  package-lock.json  package.json  task_progress.md  vite.config.ts
docs/: ANNOTATION_GUIDE.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bluetooth.rs  bluetooth_manager.rs  config.rs  cpen_device_manager.rs  download.rs  event_emitter.rs  lib.rs  main.rs  screenshot.rs  storage.rs  upload.rs
src-tauri/src/bluetooth/: manager.rs  mod.rs  service.rs  state.rs
src/api/: fileApi.ts  shareApi.ts
src/assets/: vue.d.ts
src/components/annotate/: AnnotatePanel.vue
src/components/data/: auth.js  bluetooth.js  download.js  fileSystem.js  noteStorage.js  storage.js  upload.js
src/components/file/: FileGrid.vue  FileItem.vue  FileTable.vue  FileTree.vue  UploadZone.vue
src/components/layout/: AppHeader.vue  LoginCard.vue  NAV.vue  Sidebar.vue  header.vue  showToast.js
src/components/modals/: CreateFolderModal.vue  ShareModal.vue
src/composables/: useToast.js
src/config/: backend.js
src/router/: index.ts
src/stores/: bluetooth.js  useFileStore.ts  useUploadStore.ts
src/utils/: annotationStorage.js  fileIcon.js
src/views/: AboutView.vue  ContactView.vue  FileView.vue  FloatView.vue  HardwareSettings.vue  HomeView.vue  InitialView.vue  Main.vue  MoreInfo.vue  Notes.vue  ScreenshotView.vue  Settings.vue  SoftwareSettings.vue  TransferView.vue  TrashView.vue
