[package]
name = "camfc-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "camfc_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = "^0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
windows = { version = "0.58", features = [
    "Devices_Radios",
    "Foundation",
    "Foundation_Collections",
    "Foundation_Numerics",  
] }
uuid = "1.19.0"
chrono = "0.4"
# 下载功能新增依赖
reqwest = { version = "0.12", features = ["json", "multipart"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
tempfile = "3.10"
anyhow = "1.0"
bytes = "1.7"
urlencoding = "2.1"
rfd = "0.14"
